[project]
name = "creativeforge-api"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=1.6.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "sentence-transformers>=2.7.0",
    "pgvector>=0.3.0"
]
